ssad_te: core ACE: can NOT fix Chinese letter-spacing BUG, because ACE does not support CJK chars well

--- a/ssad_app/ssad_te/style/main.less
+++ b/ssad_app/ssad_te/style/main.less
@@ -105,7 +105,16 @@ body {
         flex: 1;
       }
 
-      // TODO ACE
+      // ACE
+      .ace_editor {
+        // FIX text style
+        line-height: 1.5em;
+        // FIXME
+        letter-spacing: -0.06em;
+        .ace_cjk {
+          //width: 1em !important;
+        }
+      }
     }
     z-index: 0;
   }
